config/manifests/gateway/gke/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
 name: inference-gateway
spec:
 gatewayClassName: gke-l7-regional-external-managed
 listeners:
 - name: http
   port: 80
   protocol: HTTP
   allowedRoutes:
     kinds:
     - kind: HTTPRoute
     namespaces:
       from: All
