config/manifests/gateway/gke/resources.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
 name: e2e-inference-gateway
spec:
 gatewayClassName: gke-l7-regional-external-managed
 listeners:
 - name: http
   port: 80
   protocol: HTTP
   allowedRoutes:
     kinds:
     - kind: HTTPRoute
     namespaces:
       from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: mytest-inference-httproute
spec:
 parentRefs:
 - name: e2e-inference-gateway
   kind: Gateway
 rules:
 - backendRefs:
   - group: inference.networking.x-k8s.io
     name: vllm-llama2-7b
     kind: InferencePool
